--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Keyword-Simple
 
+0.02    2013-09-27
+        fix line number bug (line numbers off by one after keyword)
+
 0.01    2012-12-02
         First version, released on an unsuspecting world.
 
